# tools

iceberg-metadata-sync/: FINAL_SUMMARY.md  PROJECT_SUMMARY.md  README.md  requirements.txt  setup.py
rhel-upgrade-automation/: .gitignore  AUTO_DISCOVERY_GUIDE.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  INDEX.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  UPGRADE_CHECKLIST.md  data-sources.tf  main.tf  outputs.tf  terraform-auto-discover.tfvars.example  terraform-minimal.tfvars.example  terraform.tfvars.example  (+1 more)
text-to-sql-agent/: .cursorrules  .gitignore  CHANGELOG.md  CLEANUP_COMPLETE.md  CONTRIBUTING.md  FOLLOWUP_SQL_FIX.md  FOLLOW_UP_FEATURE.md  IMPROVEMENTS.md  LAYOUT_COMPARISON.md  LICENSE  MANIFEST.in  MESSAGE_FORMAT_FIXED.md  PROJECT_CLEAN.md  README.md  READY_TO_RUN.md  SCHEMA_BEFORE_AFTER.md  SCHEMA_DISPLAY_UPDATED.md  SCHEMA_LAYOUT_IMPROVEMENTS.md  SQL_VALIDATION_SUMMARY.md  TEST_QUESTIONS.py  UI_FIX_SUMMARY.md  UI_LAYOUT_UPDATE.md  UI_RESTRUCTURED.md  VALIDATION_ADDED.md  VECTOR_STORE_IMPLEMENTATION.md  VIZ_DEBUG_STATUS.md  debug_followup.py  exported_data.csv  launch.py  pyproject.toml  requirements.txt  run_full_test.sh  run_local.sh  setup.cfg  setup.sh  test_comprehensive.py  test_followup.py  test_full_interaction.py  test_local.sh  test_message_format.py  (+5 more)
text-to-sql-agent/cloudera/: QUICK_REFERENCE.md  README.md  ai_inference_config.yaml  ai_inference_deploy.py  ai_inference_model.py  cml_deploy.py  cml_model.py  cml_requirements.txt  cml_test_model.py  deploy_cml.sh  test_cml.sh
text-to-sql-agent/config/: config.example.yaml
text-to-sql-agent/data/: telco_sample.db
text-to-sql-agent/docs/: API.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CLOUDERA_DEPLOYMENT.md  CONFIDENCE_SCORING.md  DEPLOYMENT.md  DOCUMENTATION_ORGANIZATION.md  GRADIO_TOOLS_SUMMARY.md  MVP_PACKAGE.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  TELCO_DATABASE.md  TELCO_TEST_SUITE.md  TOOLS.md
text-to-sql-agent/scripts/: create_telco_db.py  example_usage.py  init_vector_stores.py  run_tests.py  telco_menu.sh  test_full_agent.py  test_telco_questions.py  test_telco_simple.py
text-to-sql-agent/src/: __init__.py  main.py
text-to-sql-agent/src/agent/: __init__.py  agent.py  feedback.py  memory.py  tool_agent.py  tools.py  validator.py
text-to-sql-agent/src/api/: __init__.py  api.py
text-to-sql-agent/src/integrations/: __init__.py  teams.py
text-to-sql-agent/src/llm/: __init__.py  llm_manager.py
text-to-sql-agent/src/metadata/: __init__.py  metadata_manager.py
text-to-sql-agent/src/query/: __init__.py  query_executor.py  query_generator.py
text-to-sql-agent/src/ui/: README.md  __init__.py  gradio_app.py  gradio_simple.py
text-to-sql-agent/src/utils/: __init__.py  config.py  logger.py
text-to-sql-agent/src/vector_store/: __init__.py  vector_store.py
text-to-sql-agent/src/visualization/: __init__.py  visualization_engine.py
text-to-sql-agent/tests/: conftest.py
text-to-sql-agent/tests/data/: test_config.yaml
text-to-sql-agent/tests/e2e/: test_api.py
text-to-sql-agent/tests/integration/: test_agent_workflow.py
text-to-sql-agent/tests/unit/: test_feedback.py  test_memory.py  test_query_generator.py  test_validator.py  test_vector_store.py
text-to-sql-agent/web_ui/frontend/: index.html
(+59 files in other folders)
